HTML File Adjust

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,38 @@
-.env.backup
+# Environment files
 .env
+.env.backup
 .env.example
+.env.local
+
+# Virtual environments
+venv/
 .venv/
+env/
+.env/
+
+# Python cache files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Database files
+*.db
+*.sqlite3
+
+# macOS files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Logs
+*.log
