--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ MarkupSafe==3.0.2
 openai==1.52.0
 pillow==10.4.0
 pydantic==2.11.7
+PyPDF2==3.0.1
 pydantic_core==2.33.2
 python-dotenv==1.1.1
 python-multipart==0.0.20
