HTML File Adjust 10

--- a/env.sample
+++ b/env.sample
@@ -7,6 +7,9 @@ OPENAI_API_KEY=sk-your-openai-api-key-here
 # Google Place ID (optional - for Google review links)
 GOOGLE_PLACE_ID=ChIJ_your_google_place_id_here
 
+# Clinic Name (optional - used for Google search fallback when Place ID is not available)
+CLINIC_NAME=Dr. Sarah Clinic
+
 # Admin Password (required for login)
 ADMIN_PASSWORD=your-secure-admin-password-here
 
