Database PreSeed Deactivate

--- a/env.sample
+++ b/env.sample
@@ -15,3 +15,15 @@ ADMIN_PASSWORD=your-secure-admin-password-here
 
 # Secret Key (required for sessions)
 SECRET_KEY=your-secret-key-for-sessions-here 
+
+# Database (optional)
+# Override default SQLite path or point to external DB engine.
+# Examples:
+#   sqlite: DATABASE_URL=sqlite:////data/clinic_reviews.db
+#   postgres: DATABASE_URL=postgresql+psycopg2://user:pass@host:5432/dbname
+#   mysql: DATABASE_URL=mysql+pymysql://user:pass@host:3306/dbname
+# DATABASE_URL=
+
+# Seed control (optional)
+# Set to true to prevent default seeding on startup (useful in production where DB already has data)
+# SKIP_DB_SEED=true
